image name discrption

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
 
 <head>
-    <title>First Project</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>resume</h1>
-    <h2>name yahiyya</h2>
-    <h3>graduation b.com</h3>
-    <h4>studying web dev</h4>
+    <div class="newClass">
+        <img src="12291.jpg">
+        <h1>Yahiya</h1>
+        <p>Learning Web Development</p>
+    </div>
+
 </body>
 
 </html>
