--- a/index.html
+++ b/index.html
@@ -7,11 +7,70 @@
 </head>
 
 <body>
-    <div class="newClass">
-        <img src="12291.jpg">
-        <h1>Yahiya</h1>
-        <p>Learning Web Development</p>
-    </div>
+    <nav>
+        <ul>
+            <li class="navLi">
+                <a href="#yahiyya">_yahiyya</a>
+            </li>
+            <li class="navLi">
+                <a href="#home">_home</a>
+            </li>
+            <li class="navLi">
+                <a href="#about">_about</a>
+            </li>
+            <li class="navLi">
+                <a href="#projects">_projects</a>
+            </li>
+            <li class="navLi">
+                <a href="#contact">_contact</a>
+            </li>
+        </ul>
+    </nav>
+    <section id="home">
+        <div class="newClass">
+            <img src="12291.jpg">
+            <h1>Yahiyya</h1>
+            <p>Learning Web Development</p>
+        </div>
+    </section>
+
+    <section id="about">
+        <p class="bracket">{/}</p>
+        <p class="aboutme">{about me}</p>
+        <p class="about">...lorem ipsum dolor sit amet, consectetur adipiscing <br />elit. Ut elit tellus, luctus nec
+            ullamcorper mattis.
+        </p>
+        <div class="parent-about">
+            <div class="left-about child-about">
+                <p>
+                    ...I have over 12 years of experience in web development, with a strong background in both front-end
+                    and back-end technologies;
+                </p>
+            </div>
+            <div class="right-about child-about">
+                <p>
+                    …curabitur sit amet luctus tortor, sit amet ultrices ante. Maecenas convallis dui arcu, et tempor
+                    felis consectetur vel. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                    cubilia curae; Sed id velit ex. Cras ultricies nisi eget sem mollis, a maximus felis laoreet. Nam
+                    eget ultricies urna, vel ullamcorper arcu. Quisque feugiat rhoncus arcu, a tincidunt arcu lacinia
+                    ac. Maecenas molestie vel ante in finibus. Sed sit amet ligula eros. In hac habitasse platea
+                    dictumst;
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <h1 class="project"> project </h1>
+        <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam maiores, odit facere in debitis eos
+            accusantium! Dolore et, itaque consequuntur officia enim, aliquid quam quidem tenetur saepe mollitia,
+            laboriosam non facere commodi cumque doloribus. Quisquam sint sapiente aspernatur optio illum, error cum
+            nulla impedit alias velit expedita fugiat perferendis omnis. Accusamus numquam minima sint perspiciatis
+            praesentium. Sapiente corporis possimus tempora?</h2>
+    </section>
+    <section id="contact">
+        <h3 class="contact"> contact me</h3>
+    </section>
 
 </body>
 
