--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 
 <body>
 
-    <nav>
-        <ul class="navbar">
+   <nav>
+    <div class="nav-container">
+        <button class="hamburger" id="hamburger">&#9776;</button>
+        <ul class="navbar" id="navbar">
             <li><a href="#home">_home</a></li>
             <li><a href="#about">_about</a></li>
             <li><a href="#projects">_projects</a></li>
             <li><a href="#contact">_contact</a></li>
         </ul>
-    </nav>
+    </div>
+</nav>
+
+
+    
 
     <header id="home">
         <div class="hero">
@@ -80,6 +86,13 @@
             alert("Thanks for reaching out! Your message has been saved.");
         });
     </script>
+
+    <script>
+    document.getElementById('hamburger').addEventListener('click', function () {
+        document.getElementById('navbar').classList.toggle('show');
+    });
+</script>
+
 </body>
 
 </html>
