--- a/first-web-project-main/index.html
+++ b/first-web-project-main/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>My Portfolioooo</title>
+    <title>My Portfoli</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
